--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <div class="row">
                     <div class="col-sm-5 text-center">
                         <div class="gmap">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3451.9068849264695!2d-93.76369699999996!3d30.096853000000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x863eaab62a108b6b%3A0xc8c946a42d4d7ad1!2sSussex+Manor+Apartments!5e0!3m2!1sen!2sus!4v1428170954544" width="800" height="600" frameborder="0" style="border:0"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3451.389225682227!2d-93.760732!3d30.111674!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8639554962803a8d%3A0xaaee9404040ec738!2sSunset+Grove+Apartments!5e0!3m2!1sen!2sus!4v1428175318871" width="800" height="600" frameborder="0" style="border:0"></iframe>
                         </div>
                     </div>
 
@@ -393,15 +393,15 @@
                         <ul class="row">
                             <li class="col-sm-6">
                                 <address>
-                                    <h5>Sussex Manor Apartments</h5>
-                                    <p>3000 MacArthur Dr<br>
+                                    <h5>Sunset Grove Apartments</h5>
+                                    <p>2801 W Sunset Dr<br>
                                     Orange, TX 77630</p>
-                                    <p>Phone:(409) 883-3475 <br>
+                                    <p>Phone:(409) 883-0854 <br>
                                     Email Address:info@domain.com</p>
                                 </address>
 
                                 <address>
-                                    <h5>Zonal Office</h5>
+                                    <h5>Sunset Grove Apartments</h5>
                                     <p>1537 Flint Street <br>
                                     Tumon, MP 96911</p>
                                     <p>Phone:670-898-2847 <br>
